// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing-plugin-bff setJestConfigForBFF 1`] = `
{
  "projects": [
    {
      "globals": {
        "modern_bff_info": {
          "appDir": "<ROOT>/tests/bff/fixtures/bff1",
          "modernUserConfig": {},
          "plugins": [],
          "routes": [],
        },
      },
      "moduleNameMapper": {},
      "modulePathIgnorePatterns": [
        "config.test.ts",
      ],
      "resolver": "<ROOT>/src/base/config/resolver.ts",
      "rootDir": "<ROOT>/tests/bff/fixtures/bff1/api",
      "setupFilesAfterEnv": [
        "<ROOT>/src/cli/bff/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": {
        "/.[jt]sx?$": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-jest/dist/index.js",
          {
            "diagnostics": {
              "warnOnly": true,
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`testing-plugin-bff testTimeout should not set in projects 1`] = `
{
  "projects": [
    {
      "globals": {
        "modern_bff_info": {
          "appDir": "<ROOT>/tests/bff/fixtures/bff1",
          "modernUserConfig": {},
          "plugins": [],
          "routes": [],
        },
      },
      "moduleNameMapper": {},
      "modulePathIgnorePatterns": [
        "config.test.ts",
      ],
      "resolver": "<ROOT>/src/base/config/resolver.ts",
      "rootDir": "<ROOT>/tests/bff/fixtures/bff1/api",
      "setupFilesAfterEnv": [
        "<ROOT>/src/cli/bff/setup.ts",
      ],
      "testEnvironment": "node",
      "testMatch": [
        "**/api/**/*.test.[jt]s",
      ],
      "transform": {
        "/.[jt]sx?$": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-jest/dist/index.js",
          {
            "diagnostics": {
              "warnOnly": true,
            },
          },
        ],
      },
    },
  ],
  "testTimeout": 1000,
}
`;
